objects/ortoo_qra__Search_Filter__c.object
<CustomObject>
    <description>Search filter object to store all kind of search filters across Q-assign configuration.</description>
    <fields>
        <fullName>ortoo_qra__App_Location__c</fullName>
        <description>Stores location of the filter in the app.</description>
        <inlineHelpText>Stores location of the filter in the app.</inlineHelpText>
        <label>App Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GlobalDefaultUserOOOCalendar</fullName>
                </value>
                <value>
                    <fullName>UserStatusOOOCalendar</fullName>
                </value>
                <value>
                    <fullName>UserStatusDefaultShiftCalendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Filter_Logic__c</fullName>
        <description>Stores filter logic between child Filter Rows</description>
        <inlineHelpText>Stores filter logic between child Filter Rows</inlineHelpText>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Primary_Object__c</fullName>
        <description>Primary object for which this filter is used.</description>
        <inlineHelpText>Primary object for which this filter is used.</inlineHelpText>
        <label>Primary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Related_To_Object_Record_Id__c</fullName>
        <description>The record ID of on the object where the filter resides.</description>
        <inlineHelpText>The record ID of on the object where the filter resides.</inlineHelpText>
        <label>Related To Object Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Related_To_Object__c</fullName>
        <description>The object this filter is for</description>
        <inlineHelpText>The object this filter is for</inlineHelpText>
        <label>Related To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QA Search Filter</label>
    <nameField>
        <label>Search Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Search Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>